# mirage

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
scripts/: analyze_af2m_confidence_vs_rmsd.py  analyze_champloo_classifier.py  analyze_champloo_structural.py  analyze_epcam_af2m_confidence.py  analyze_mc_cross_regime.py  analyze_mc_epcam.py  analyze_mc_indist.py  analyze_ms_indist.py  analyze_ms_orthogonal.py  analyze_sabdab_baseline.py  analyze_sabdab_orthogonal.py  analyze_stage2.py  analyze_structural_interface.py  analyze_structural_logreg.py  build_baseline_family_leaderboard.py  compare_champloo_predictors.py  embed_perresidue.py  embed_sequences.py  extract_mc_features.py  install_hmmer.sh  precompute_protenix_msa.py  score_champloo_structures.py  score_pilot_manifest.py  stage_af2m_pilot.py  stage_avida.py  stage_cdr_scrambles.py  stage_champloo_features.py  stage_champloo_pairs.py  stage_champloo_protenix_pairs.py  stage_champloo_structures.py  stage_epcam_af2m.py  stage_epcam_protenix_pairs.py  stage_protenix_pairs.py  stage_sabdab_pairs.py  stage_wrong_target_repairings.py  train_stage2.py
tests/: conftest.py  test_af2m_confidence.py  test_af2m_predictor.py  test_analyze_af2m_confidence_vs_rmsd.py  test_analyze_epcam_af2m_confidence.py  test_analyze_mc_cross_regime.py  test_analyze_mc_epcam.py  test_analyze_mc_indist.py  test_analyze_ms_indist.py  test_analyze_sabdab_baseline.py  test_analyze_stage2.py  test_analyze_structural_logreg.py  test_attribution.py  test_avida_loader.py  test_bilinear.py  test_bilinear_model.py  (+43 more)
(+86 files in other folders)
