[project]
name = "mirage"
version = "0.1.0"
description = "General antibody-antigen binder discrimination benchmark, with a secondary track investigating design pipelines."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Pedram Bayat", email = "55715189+pedrambayat@users.noreply.github.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer>=0.12",
    "biopython>=1.84",
    "freesasa>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "anarci>=2026.2.13.2",
    "dockq>=2.1.3",
]

[project.scripts]
mirage = "mirage.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mirage"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
# Vendored third-party SAbDab download utility (OPIG, 2013) — not mirage code; keep it out of lint/format.
extend-exclude = ["scripts/sabdab_downloader.py"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/mirage"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
